--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta name="robots" content="max-image-preview:large">
 <title>sidex15</title>
 <link rel="alternate" type="application/rss+xml" title="sidex15 &raquo; Feed" href="/feed/">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="alternate" type="application/rss+xml" title="sidex15 &raquo; Comments Feed" href="/comments/feed/">
 <script>
 window._wpemojiSettings = {"baseUrl":"https://s.w.org/images/core/emoji/14.0.0/72x72/","ext":".png","svgUrl":"https://s.w.org/images/core/emoji/14.0.0/svg/","svgExt":".svg","source":{"concatemoji":"./wp-includes/js/wp-emoji-release.min.js?ver=6.3.2"}};
